rns-lang/tests/snapshots/error-lexer-directives-dot_static_werror.snap
---
source: rns/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class
.static
.method
----- STDERR -----
[E001] Error: unknown directive
   ╭─[ test_data/integration/error/lexer/directives/dot_static.rns:2:1 ]
   │
 2 │ .static
   │ ───┬───  
   │    ╰───── unknown directive
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
