rns-lang/tests/snapshots/error-lexer-directives-two_dots_wasm.snap
---
source: rns/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
..
----- STDERR -----
[E001] Error: unknown directive
   ╭─[ test_data/integration/error/lexer/directives/two_dots.ja:1:1 ]
   │
 1 │ ..
   │ ─┬  
   │  ╰── unknown directive
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
